2004-10-01  Ross Burton  <ross@burtonini.com>

	* src/devilspie-action-exec.gob:
	* src/flurb.c:
	* src/Makefile.am:
	Add command execution action by John Russell.

2004-10-01  Ross Burton  <ross@burtonini.com>

	* src/devilspie-action-resize.gob:
	* README:
	Add maximized_horizontally and maximized_vertically, patch from
	John Russell.

2004-09-20  Ross Burton  <ross@burtonini.com>

	* src/devilspie-action-resize.gob:
	* src/devilspie-action-setwintype.gob:
	* src/devilspie-matcher-windowname.gob:
	Various fixes for compile warnings.

	* src/Makefile.am:
	Add -Wall to CFLAGS.

2004-09-14  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.7.

2004-09-07  Ross Burton  <ross@burtonini.com>

	* README:
	* sample-config.xml:
	* src/devilspie-action-decorate.gob:
	Set the Motif decoration hint aswell as the OpenBox one.  Patch
	from Vaclav Lorenc.

2004-08-19  Ross Burton  <ross@burtonini.com>

	* src/devilspie-action-resize.gob:
	Include config.h, fixing the resize action.

	* src/devilspie.c:
	Stop using g_list_first() for no good reason.

	* configure.in:
	* NEWS:
	Version 0.6.

2004-08-17  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	Fix a typo.
	
	* configure.in:
	Version 0.5.1.

2004-08-17  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.5.

2004-08-16  Ross Burton  <ross@burtonini.com>

	* src/devilspie-action-setgeometry.gob:
	* src/Makefile.am:
	* src/flurb.c:
	* README:
	Action to set the geometry of a window. Thanks to Henrik Brix
	Andersen <brix@gimp.org> for the patch.

	* src/devilspie-action-debug.gob:
	Print the geometry of the window (HBA).

	* sample-config.xml:
	Demonstrate the new action.
	
2004-06-13  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.4.1

2004-06-11  Ross Burton  <ross@burtonini.com>

	* Makefile.am:
	Stop disting debian/.  I build the debs around here!

2004-06-06  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.4
